--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -6,10 +6,12 @@
 <meta name="keywords" content="" />
 <title class="lift:Menu.title">My App</title>
 
-<script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
 <script id="json" src="/classpath/json.js" type="text/javascript"></script>
-<script id="jquery" src="/scripts/jquery-1.6.4.min.js"
-	type="text/javascript"></script>
+<!-- 
+<script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
+<script id="jquery" src="/scripts/jquery-1.6.4.min.js" type="text/javascript"></script>
+ -->
+<script id="jquery" src="/scripts/jquery-1.7.1.js" type="text/javascript"></script>
 
 <!-- 
 <link rel="stylesheet" type="text/css" href="/bootstrap/1.4.0/bootstrap.css">
@@ -23,15 +25,15 @@
 
 </head>
 <body>
-	<div class="topbar">
-		<div class="fill">
+	<div class="navbar">
+		<div class="navbar-inner">
 			<div class="container">
 				<a class="brand" href="/">My App</a> 
 				<span class="lift:TBNav.menuToTBNav?eager_eval=true"> 
 				  <span data-lift="lift:Menu.builder?top:class=nav;li_item:class=active;linkToSelf=true;expandAll=true;group=main"></span>
 				</span>
 				<span data-lift="lift:TBNav.menuToTBNav?eager_eval=true"> 
-				  <span data-lift="lift:Menu.builder?top:class=nav secondary-nav;li_item:class=active;linkToSelf=true;expandAll=true;group=user"></span>
+				  <span data-lift="lift:Menu.builder?top:class=nav pull-right;li_item:class=active;linkToSelf=true;expandAll=true;group=user"></span>
 				<!-- 
 				 -->
 				</span>
