--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,9 @@
 	  Welcome to your Lift app at <span id="time">Time goes here</span>
 	</span>
       </p>
+      <p>
+      Log with username: fred@fred.com, password: password to see the user dropdown menu in action
+      </p>
     </div>
   </body>
 </html>
