--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,7 +13,11 @@
 	</span>
       </p>
       <p>
-      Log with username: fred@fred.com, password: password to see the user dropdown menu in action
+      To see the user dropdown menu in action, log with:
+      <ul>
+      <li>username: fred@fred.com</li>
+      <li>password: password </li>
+      </ul> 
       </p>
     </div>
   </body>
